Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
 <body>
   
 <div id="erdikoa">
-  <a href="https://piobaroja.eus/" target="_blank" rel="noopener noreferrer"><img src="./PioBarojaIKASLEAK_files/pio_logo_berria.png"></a> 
+  <a href="https://piobaroja.eus/" target="_blank" rel="noopener noreferrer"><img src="./irudiak/pio_logo_berria.png"></a> 
   <div id="zerbitzuak">
-    <div id="izenburua"><img src="./PioBarojaIKASLEAK_files/botoi_horizontalak_ikasleak.png"></div> 
+    <div id="izenburua"><img src="./irudiak/botoi_horizontalak_ikasleak.png"></div> 
     
-    <a href="https://gmail.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./PioBarojaIKASLEAK_files/01_korreoa.png"></a>
-    <a href="https://elearning24.hezkuntza.net/013013/login/index.php/default.aspx" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./PioBarojaIKASLEAK_files/02_moodle.png"></a>
-    <a href="https://iespiobarojabhi.net/egutegia.pdf" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./PioBarojaIKASLEAK_files/03_egutegia.png"></a>
+    <a href="https://gmail.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/01_korreoa.png"></a>
+    <a href="https://elearning24.hezkuntza.net/013013/login/index.php/default.aspx" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/02_moodle.png"></a>
+    <a href="https://iespiobarojabhi.net/egutegia.pdf" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/03_egutegia.png"></a>
    
-    <a href="https://google.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./PioBarojaIKASLEAK_files/botoia_04_google.png"></a>
+    <a href="https://google.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_04_google.png"></a>
     
   
   </div>
