Add link to Google Drive in index.html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
    
     <a href="https://google.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_04_google.png"></a>
     <a href="https://forms.gle/DYtLZgm2V4TkWyRx7/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/05_matxurak.png"></a>
-  
+  <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_06_drive.png"></a>
   </div>
       
   
