--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background-image: url("fondo_gabonak.jpg");
+      background-image: url("fondo_03.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       font-family: 'Tahoma', sans-serif;
