--- a/index.html
+++ b/index.html
@@ -127,9 +127,12 @@
     <a href="https://google.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_04_google.png"></a>
     <a href="https://forms.gle/DYtLZgm2V4TkWyRx7/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/05_matxurak.png"></a>
   <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_06_drive.png"></a>
+    <a href="https://classroom.google.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_07_classroom.png"></a>
+    <a href=" https://docs.google.com/forms/d/e/1FAIpQLSczJUoD3E3rvEbk2x86i-eMi-azpiqHXD0G493YprDk45JFgw/viewform " target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_08_komunika"></a>
   </div>
       
   
 
 
 <div id="quick-start-container"></div></body></html>
+
