--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     #erdikoa {
       background-color: white;
       margin: 0 auto;
-      width: 90%;
-      max-width: 1200px;
+      width: 95%;
+      max-width: 1500px;
       border-radius: 30px;
       border: 10px solid gainsboro;
       padding: 2%;
@@ -129,6 +129,7 @@
   <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_06_drive.png"></a>
     <a href="https://classroom.google.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_07_classroom.png"></a>
     <a href=" https://docs.google.com/forms/d/e/1FAIpQLSczJUoD3E3rvEbk2x86i-eMi-azpiqHXD0G493YprDk45JFgw/viewform " target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_08_komunika.png"></a>
+  <a href="https://barojasariak26.eus/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="botoia_09_barojasari.png"></a>
   </div>
       
   
