--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_06_drive.png"></a>
     <a href="https://classroom.google.com/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_07_classroom.png"></a>
     <a href=" https://docs.google.com/forms/d/e/1FAIpQLSczJUoD3E3rvEbk2x86i-eMi-azpiqHXD0G493YprDk45JFgw/viewform " target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_08_komunika.png"></a>
-  <a href="https://barojasariak26.eus/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="botoia_09_barojasari.png"></a>
+  <a href="https://barojasariak26.eus/" target="_blank" rel="noopener noreferrer" class="lotura"><img src="./irudiak/botoia_09_barojasaria.png"></a>
   </div>
       
   
