Change background image in index.html

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background-image: url("FondoEinstein.jpeg");
+      background-image: url("FondoEsaldia.jpeg");
       background-repeat: no-repeat;
       background-size: cover;
       font-family: 'Tahoma', sans-serif;
       background-attachment: fixed;
-    }
-
+  
     #erdikoa {
       background-color: white;
       margin: 0 auto;
