Change background image from FondoEsaldia.jpeg to FondoEsaldia.png

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background-image: url("FondoEsaldia.jpeg");
+      background-image: url("FondoEsaldia.png");
       background-repeat: no-repeat;
       background-size: cover;
       font-family: 'Tahoma', sans-serif;
